@@ -1,1 +1,1 @@
-co.elastic.apm.agent.hibernate.search.v5_x.HibernateSearch5Instrumentation
+co.elastic.apm.agent.hibernatesearch.HibernateSearch5Instrumentation
